# actix-newsletter

./: .env  .gitignore  Cargo.toml  Dockerfile  configuration.yaml
.cargo/: config.toml
configuration/: base.yaml  production.yaml
prisma/: schema.prisma
prisma/migrations/20230824123929_add_subscription/: migration.sql
prisma/migrations/20230827053932_add_tokens/: migration.sql
src/: configuration.rs  email_client.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/routes/: subscription_confirm.rs  subscriptions.rs
tests/: health-check.rs
tests/api/: health_check.rs  helpers.rs  subscriptions.rs
