[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"
default-run = "zero2prod"

[lib]
# We could use any path here, but we are following the community convention
# We could specify a library name using the `name` field. If unspecified,
# cargo will default to `package.name`, which is what we want.
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
reqwest = { version = "0.11.20", default-features = false, features = [
  "json",
  "rustls-tls",
] }
uuid = "1.4.1"
prisma-client-rust = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.9" }
prisma-client-rust-cli = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.9" }
actix-web = "4.3.1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0.186", features = ["derive"] }
config = "0.11"
env_logger = "0.10.0"
log = "0.4.20"
tracing = { version = "0.1.37", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3"
tracing-log = "0.1.3"
unicode-segmentation = "1"
validator = "0.16.1"
secrecy = { version = "0.8.0", features = ["serde"] }

[dev-dependencies]
claim = "0.5"
fake = "~2.3"
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
tokio = { version = "1", features = ["rt", "macros"] }
wiremock = "0.5"
serde_json = "1.0.105"
